--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,11 @@
 :root {
   --ff--main: "Roboto";
 
-  --fs--h1: 4.8rem;
+  --fs--h1: 4.2rem;
   --fs--information--header--quote: 3.6rem;
   --fs--logo: 2.4rem;
   --fs--text: 1.8rem;
+  --fs--logo--menu: 1.5rem;
 
   --fw--normal: 400;
   --fw--medium: 500;
@@ -27,6 +28,7 @@
   --clr--callback--blue: #3882f6;
   --clr--background--dark: #1f2937;
   --clr--background: #e5e7eb;
+  --clr--text-blockquote: rgba(60, 68, 73, 0.357);
 }
 
 /* global settings */
@@ -41,20 +43,207 @@ html {
 body {
   margin: 0;
   padding: 0;
+  color: #e5e7eb;
+}
+
+img {
+  max-inline-size: 100%;
+  display: block;
 }
 
 a {
   text-decoration: none;
+  color: #e5e7eb;
+}
+
+li {
+  text-decoration: none;
+  list-style: none;
 }
 
 button {
   background-color: transparent;
+  color: #e5e7eb;
   outline: none;
   border: none;
+  padding-inline: 0;
+  padding-block: 0;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 8px;
+}
+
+/* header */
+
+.header {
+  background-color: var(--clr--background--dark);
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__menu {
+  display: flex;
+  gap: 2rem;
+}
+.header__logo {
+  font-size: var(--fs--logo--menu);
+  color: var(--clr--header--main);
+}
+.header__link {
+}
+
+/* Hero */
+
+.hero {
+  padding-block: 5rem;
+  background-color: var(--clr--background--dark);
+}
+
+.hero__container {
+  display: flex;
+  min-height: 300px;
+}
+
+.hero__right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.hero__tilte {
+  margin: 0rem;
+  letter-spacing: -0.5px;
+  font-size: var(--fs--h1);
+  font-weight: var(--fw--bold);
+}
+
+.hero__text {
+  font-size: var(--fs--text);
+  line-height: 1.5;
+  color: var(--clr--header--main);
+}
+
+.hero__button {
+  display: inline-block;
+  width: 150px;
+  padding: 1rem;
+  background-color: var(--clr--callback--blue);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.hero__left {
+  flex: 1;
+  padding: 2rem 0rem 0rem 2rem;
+  background-image: url(../assests/Images/Hero__image.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* secondary */
+
+.secondary__section {
+  padding-block-end: 5rem;
+}
+.secondary__title {
+  margin-block: 3rem;
+  text-align: center;
+  font-weight: var(--fw--bold);
+  font-size: var(--fs--logo);
+  color: var(--clr--background--dark);
+}
+.secondary__flex {
+  display: flex;
+  justify-content: space-around;
+}
+.secondary__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.secondary__imgcontainer {
+  display: inline-block;
+  width: 180px;
+  height: 170px;
+  border: 3px solid var(--clr--callback--blue);
+  border-radius: 10px;
+}
+
+.secondary__text {
+  max-width: 20ch;
+  line-height: 1.5;
+  text-align: center;
+  color: var(--clr--background--dark);
+}
+
+/* tertiary */
+
+.tertiary__section {
+  padding-block: 5rem;
+  background-color: var(--clr--background);
+}
+.tertiary__blockquote {
+  max-width: 900px;
+  margin: 0 auto;
+}
+.tertiary__text {
+  max-width: 120ch;
+  font-style: italic;
+  font-size: var(--fs--logo);
+  line-height: 1.3;
+
+  color: var(--clr--text-blockquote);
+}
+.tertiary__footer {
+  color: var(--clr--background--dark);
+  text-align: end;
+}
+
+/* fourth */
+
+.fourth__container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  margin-block: 5rem;
+  padding: 3rem 0;
+  background-color: var(--clr--callback--blue);
+  border-radius: 3px;
+}
+.fourth__right {
+}
+.fourth__title {
+  margin: 0;
+}
+.fourth__text {
+  margin: 8px 0 0 0;
+}
+.fourth__left {
+}
+.fourth__button {
+  border: 1px solid white;
+}
+
+/* footer */
+
+.footer {
+  padding: 2rem 0;
+  text-align: center;
+  background-color: var(--clr--background--dark);
+  color: var(--clr--background);
 }
